<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="salasca_valerio.trustbet.CreatePariActivity">

    <EditText
        android:id="@+id/input_bet_title"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:labelFor="@+id/input_bet_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/label_bet"
        android:layout_width="86dp"
        android:layout_height="19dp"
        android:text="@string/titre_du_pari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <EditText
        android:id="@+id/input_bet_amount"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/label_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/label_euro"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:text="@string/euro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/label_bet_description"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <EditText
        android:id="@+id/input_bet_description"
        android:layout_width="288dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:lines="5"
        android:maxLines="5"
        android:text="@string/entrer_une_description_pour_le_pari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/picDate"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:onClick="datePicker"
         app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Date d'écheance" />
    <TextView
        android:layout_below="@+id/picDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/showDate"
        android:textSize="18dp"/>

    <Button
        android:id="@+id/goAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ACCUEIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="306dp" />

    <Button
        android:id="@+id/button_create_bet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creer_mon_pari"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="306dp"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>

